# mercagasto-batch

./: .env.example  .env.render.example  .gitignore  README.md  STRUCTURE.md  cleanup_test_data.py  compare_quantities.py  debug_invoice.py  extract_and_load.py  load_products_to_db.py  main.py  mercadona_ticket_parser.py.base  pyproject.toml  requirements.txt.bak  run_integration_test.py  run_pdf_integration_tests.py  setup_uv.sh  status.sh  test_invoice_debug.py  uv.toml
data/: all_subcategory_ids.txt
docs/: CATEGORIZATION.md  RENDER_SETUP.md
scripts/api_tests/: extract_all_subcategory_ids.py  find_subcategories.py
scripts/database/: extract_and_load_products.py  init_render_db.py  load_products.py  migrate_add_subscriptor_email.sql  schema.sql
scripts/debug/: categorize_products.py  debug_pdf_processing.py
scripts/legacy/: test_scraper.py  test_ticket.txt
src/mercagasto/: __init__.py
src/mercagasto/config/: __init__.py  logging.py  settings.py
src/mercagasto/models/: __init__.py  enums.py  products.py  reports.py  ticket.py
src/mercagasto/parsers/: __init__.py  base.py  formatters.py  mercadona.py
src/mercagasto/processors/: __init__.py  file_utils.py  gmail_client.py  gmail_processor.py  mercadona_api_client.py  pdf_extractor.py  product_matcher.py
src/mercagasto/reports/: __init__.py  email_client.py  formatters.py  generator.py  reporter.py
src/mercagasto/storage/: __init__.py  base.py  postgresql.py  product_loader.py  schema.sql
src/mercagasto/storage/data/: categorias.json  categorias_data.sql  categorias_data_fixed.sql  productos.json
tests/: __init__.py  generate_expected.py  test_integration.py  test_integration_db.py  test_parser.py
tests/data/: README.md
tests/data/expected/: 20230814 Mercadona 2,60 €.json  20230907 Mercadona 143,27 €.json  20230914 Mercadona 67,58 €.json  20230918 Mercadona 75,22 €.json  20230925 Mercadona 104,58 €.json  20230930 Mercadona 75,41 €.json
util/: mercadona_product_scraper.py
